--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-router": "^5.3.3",
-    "react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
+    "dropbox": "^10.32.0",
     "node": "^16.11.1",
     "node-sass": "^6.0.1",
+    "react-router": "^5.3.3",
+    "react-router-dom": "^5.3.3",
     "sass": "^1.42.1"
   },
   "devDependencies": {
