--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "dropbox": "^10.32.0",
     "node": "^16.11.1",
+    "node-cache": "^5.1.2",
     "node-sass": "^6.0.1",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
